--- a/ShotKeeper/ShotKeeper/ShotKeeper.csproj
+++ b/ShotKeeper/ShotKeeper/ShotKeeper.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ISpeechToText.cs" />
     <Compile Include="Interfaces\ITextToSpeech.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
