--- a/ShotKeeper/ShotKeeper/packages.config
+++ b/ShotKeeper/ShotKeeper/packages.config
@@ -4,6 +4,8 @@
   <package id="Prism.Core" version="6.2.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Prism.Forms" version="6.2.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Prism.Unity.Forms" version="6.2.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SkiaSharp" version="1.56.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SkiaSharp.Views.Forms" version="1.56.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
