--- a/ShotKeeper/ShotKeeper.UWP/project.json
+++ b/ShotKeeper/ShotKeeper.UWP/project.json
@@ -5,6 +5,7 @@
     "Prism.Core": "6.3.0",
     "Prism.Forms": "6.3.0",
     "Prism.Unity.Forms": "6.3.0",
+    "sqlite-net-pcl": "1.3.3",
     "Unity": "4.0.1",
     "Xamarin.Forms": "2.3.4.247"
   },
