--- a/ShotKeeper/ShotKeeper/packages.config
+++ b/ShotKeeper/ShotKeeper/packages.config
@@ -6,6 +6,9 @@
   <package id="Prism.Unity.Forms" version="6.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SkiaSharp" version="1.58.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="SkiaSharp.Views.Forms" version="1.58.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="sqlite-net-pcl" version="1.3.3" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
