--- a/ShotKeeper/ShotKeeper/ShotKeeper.csproj
+++ b/ShotKeeper/ShotKeeper/ShotKeeper.csproj
@@ -42,6 +42,8 @@
     <Compile Include="Models\ShootingSession.cs" />
     <Compile Include="Models\ShotKeeper.cs" />
     <Compile Include="ViewModels\SessionsPageViewModel.cs" />
+    <Compile Include="ViewModels\ShotKeeperCarouselPageViewModel.cs" />
+    <Compile Include="ViewModels\ShotKeeperPage1ViewModel.cs" />
     <Compile Include="Views\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
@@ -51,6 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\HomePageViewModel.cs" />
     <Compile Include="ViewModels\ShotKeeperPageViewModel.cs" />
+    <Compile Include="Views\ShotKeeperPage1.xaml.cs">
+      <DependentUpon>ShotKeeperPage1.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="App.xaml">
@@ -68,6 +73,9 @@
     </EmbeddedResource>
     <Compile Include="Views\SessionsPage.xaml.cs">
       <DependentUpon>SessionsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ShotKeeperCarouselPage.xaml.cs">
+      <DependentUpon>ShotKeeperCarouselPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ShotKeeperPage.xaml.cs">
       <DependentUpon>ShotKeeperPage.xaml</DependentUpon>
@@ -139,6 +147,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\SessionsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ShotKeeperCarouselPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ShotKeeperPage1.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
