--- a/ShotKeeper/ShotKeeper.UWP/ShotKeeper.UWP.csproj
+++ b/ShotKeeper/ShotKeeper.UWP/ShotKeeper.UWP.csproj
@@ -96,6 +96,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FileHelper.cs" />
     <Compile Include="Implementations\SpeechToTextImplementation.cs" />
     <Compile Include="Implementations\TextToSpeechImplementation.cs" />
     <Compile Include="MainPage.xaml.cs">
