- Created FreeThrow tests for a ShootingSession.

--- a/ShotKeeper/Tests/ShotKeeper.Tests/ShotKeeper.Tests.csproj
+++ b/ShotKeeper/Tests/ShotKeeper.Tests/ShotKeeper.Tests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\ShotKeeper\ShotKeeper.csproj">
+      <Project>{6204023d-0994-4c6b-b71c-2db3bd9ea150}</Project>
+      <Name>ShotKeeper</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
