--- a/ShotKeeper/ShotKeeper.Droid/ShotKeeper.Droid.csproj
+++ b/ShotKeeper/ShotKeeper.Droid/ShotKeeper.Droid.csproj
@@ -175,6 +175,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileHelper.cs" />
     <Compile Include="Implementations\TextToSpeechImplementation.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
