--- a/ShotKeeper/ShotKeeper.iOS/ShotKeeper.iOS.csproj
+++ b/ShotKeeper/ShotKeeper.iOS/ShotKeeper.iOS.csproj
@@ -88,6 +88,7 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="FileHelper.cs" />
     <Compile Include="Implementations\TextToSpeechImplementation.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
